# data-engineering-python-monorepo

./: .dbtignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dbt.packages.yml  dbt.profiles.yml  dbt.project.yml  pyproject.toml  setup.py
.dbt/: dbt_project.yml
.github/: PULL_REQUEST_TEMPLATE.md
data-catalog/: pyproject.toml
data-catalog/src/data_catalog/: json_schema.py
data-catalog/src/data_catalog/customer/: xero_contact.py
data-catalog/src/data_catalog/finance/: xero_invoice.py
data-ingestion/di-microbatch/: pyproject.toml
data-ingestion/di-webhook/: pyproject.toml
data-ingestion/di-webhook/src/webhook/: lambda_function.py
data-ingestion/di-webhook/src/webhook/routes/: __init__.py  xero.py
data-ingestion/di-webhook/src/webhook/utils/: constants.py  types.py
data-integration/: pyproject.toml
data-warehouse/: pyproject.toml
