[project]
name = "data-engineering-python-monorepo"
version = "0.1.0"
description = "A data engineering monorepo template"
authors = [
  {name="Joshua Marango", email="hello@joshuamarango.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
data-warehouse = { workspace = true }

[tool.uv.workspace]
members = [
  "data-warehouse",
  "data-ingestion/di-webhook"
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "commitizen>=4.4.1",
    "pytest>=8.3.5",
    # These are added as dev dependencies becuase they should be available
    #  when developing the project.
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "aws-lambda-powertools[all]==3.7.0",
]
package = false

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | .notebooks
    | .nox
  )
)
'''

[tool.isort]
profile = "black"
extend_skip = [".tmp", ".venv"]

[tool.mypy]
exclude = "^.tmp/"
ignore_missing_imports = true

[tool.bandit]
skips = ['B101']

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  "docs",
  "site",
  ".tmp"
]

[tool.pytest.ini_options]
cache_dir = "/home/vscode/workspace/.cache/pytest"
pythonpath = [".", "scripts"]
